--- a/view/index.html
+++ b/view/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Recogizer</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/index.tsx"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Recognizer</title>
+</head>
+
+<body class="bg-black">
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
+</body>
+
 </html>
